# homepage

./: .gitignore  LICENSE  README.md  README.org  career.html  consulting.html  contact.html  essays.html  homepage.cabal  index.html  robots.txt  site.hs  stack.yaml
career/: 2014-06-02-consulting-engineer.markdown
drafts/: demings-funnel.md  improving-flow.md  knowledge-and-complexity.md  the-goal.md  wages-and-productivity.md  where-to-improve-quality.md
essays/: books-about-manufacturing.md  improve-quality-to-reduce-accidents.md  procedure-for-procedures.md  procedure-review-checklist.md  process-variation.md  specifying-processes-and-products.md
jobs/: 2014-06-02-consulting-engineer.markdown
templates/: default.html  essay-list.html  essay.html  job-list.html
