name:                homepage
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            rheosystems.com
license:             AllRightsReserved
license-file:        LICENSE
author:              Mikkel Christiansen
maintainer:          mikkel@rheosystems.com
copyright:           2014-2018 Rheo Systems (Pty) Ltd.
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.22

executable homepage
  main-is:             site.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , hakyll
  -- hs-source-dirs:
  default-language:    Haskell2010
